# tau2-bench-with-grok

./: .env.example  README.md  pyproject.toml  result_analysis.ipynb  run_benchmark.py
results/: grok_airline_example.json
src/tau2/: cli.py  config.py  run.py
src/tau2/data_model/: simulation.py  tasks.py
src/tau2/evaluator/: evaluator.py  evaluator_action.py  evaluator_process.py  robust_user_variants.py  semantic_args.py
src/tau2/metrics/: agent_metrics.py
src/tau2/utils/: display.py  llm_utils.py
